syntax = "proto3";

package pbtypes;

import "proto/pbcrypto/signature.proto";
import "gogoproto-1.4.3/protobuf/google/protobuf/timestamp.proto";
import "gogoproto-1.4.3/gogoproto/gogo.proto";

message Block {
  Header header           = 1;
  Data body               = 2;
}

message BlockHeight {
  int64 height = 1;
}

message CommitBlock {
  int64 height = 1;
  bytes hash = 2;
  pbcrypto.AggregateSignature aggregate_signature = 3;
}

message Header {
  bytes previous_block_hash           = 1;
  bytes hash                          = 2;
  int64 height                        = 3;
  google.protobuf.Timestamp timestamp = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  string proposer                     = 5;
}

message Data {
  bytes     root_hash = 1;
  repeated bytes  txs = 2;
}
